--- a/src/component/client/Style.css
+++ b/src/component/client/Style.css
@@ -99,10 +99,10 @@ footer{
 }
 
 .step2-project-box{
-    border: 1px solid #eee;
+    border: 1px solid #ccc;
     margin: 30px;
     padding: 40px;
-    border-radius: 10px;
+    border-radius: 5px;
     cursor: pointer;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(0, 0, 0, 0.15);
 }
@@ -122,6 +122,18 @@ footer{
     padding-top: 30px;
     padding-left: 5%;
     padding-bottom: 50px;
+}
+
+.combo-container{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    min-height: 50vh;
+}
+
+.combo{
+    float: left;
+    margin-right: 30px;
+    width: 18rem
 }
 
 
