--- a/src/component/client/Addition.css
+++ b/src/component/client/Addition.css
@@ -51,7 +51,7 @@
     background: #fff;
     min-height: 600px;
     width: 100%;
-    padding: 50px;
+    padding: 30px;
 }
 
 .addition-btns{
@@ -73,4 +73,23 @@
     margin-bottom: 30px;
     padding-bottom: 30px;
     border-bottom: #eee 1px solid;
+}
+
+
+
+.number-input {
+margin-bottom: 2rem;
+}
+
+.number-input>input{
+    border-radius: 0.25em;
+    border: #666 1px solid;
+    height: 3em;
+    padding: 1em
+}
+
+.summary-row{
+    height: 4em;
+    margin: 1em auto;
+    border-bottom: #eee 1px solid
 }
