--- a/src/component/client/Addition.css
+++ b/src/component/client/Addition.css
@@ -4,20 +4,21 @@
     border-bottom: 1px dotted #ddd;
     height: 170px;
     padding-top: 40px;
+    background: #17a2b8;
 }
 
 .addition-header-title{
     text-align: center;
     font-size: 36px;
     font-weight: 600;
-    color: #666
+    color: #fff
 }
 
 .addition-header-sub-title{
     text-align: center;
     font-size: 18px;
     font-weight: 600;
-    color: #888;
+    color: #eee;
     padding-top: 10px;
 }
 
@@ -25,7 +26,7 @@
     min-height: 600px;
     height: auto;
     background: #eee;
-    padding: 100px 50px 100px 30px;
+    padding: 50px 50px 50px 30px;
 
 }
 
@@ -51,11 +52,15 @@
     background: #fff;
     min-height: 600px;
     width: 100%;
-    padding: 30px;
+    padding: 20px;
+    border-radius: 10px;
+    overflow-y: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .addition-btns{
-    width: 100%
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .addition-options{
@@ -63,12 +68,14 @@
     min-height: 600px;
     width: 100%;
     padding: 50px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
 .addition-options-title{
     text-align: center;
-    font-size: 28px;
+    font-size:36px;
     font-weight: 600;
     margin-bottom: 30px;
     padding-bottom: 30px;
@@ -76,10 +83,19 @@
 }
 
 
-
-.number-input {
-margin-bottom: 2rem;
+.addition-option-row{
+    border-bottom: 1px solid #eee;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
 }
+
+.addition-option-row-label{
+    padding-top: 10px;
+    margin-left: -15px;
+}
+
+
 
 .number-input>input{
     border-radius: 0.25em;
@@ -91,5 +107,6 @@ margin-bottom: 2rem;
 .summary-row{
     height: 4em;
     margin: 1em auto;
-    border-bottom: #eee 1px solid
+    border-bottom: #eee 1px solid;
+    margin-top: 30px;
 }
