--- a/src/component/client/Addition.css
+++ b/src/component/client/Addition.css
@@ -88,11 +88,13 @@
     margin-bottom: 20px;
     padding-bottom: 20px;
     padding-left: 30px;
+
 }
 
 .addition-option-row-label{
     padding-top: 10px;
     margin-left: -15px;
+    padding-right: 30px;
 }
 
 
@@ -105,7 +107,7 @@
 }
 
 .summary-row{
-    height: 4em;
+    min-height: 4em;
     margin: 1em auto;
     border-bottom: #eee 1px solid;
     margin-top: 30px;
