--- a/src/component/client/ShoppingCart.css
+++ b/src/component/client/ShoppingCart.css
@@ -15,10 +15,16 @@
 
 }
 
-.cart-content-row{
+.cart-content-frame{
     margin: 40px 0;
     min-height: 80px;
     border: 1px solid #eee;
+    padding: 20px 40px;
+}
+
+.cart-content-row{
+    border-bottom: 1px solid #eee;
+    margin-bottom: 40px;
 }
 
 
@@ -29,4 +35,21 @@
 
 .cart-content-btn{
     float: right;
+}
+
+.cart-content-server-frame{
+    margin-top: 10px;
+}
+
+.cart-content-server-row{
+    height: 80px;
+}
+
+.cart-footer{
+    margin: 10px 200px;
+}
+
+.cart-footer-func{
+    margin: 30px auto;
+    text-align: center;
 }
