--- a/src/component/client/Home.css
+++ b/src/component/client/Home.css
@@ -8,7 +8,8 @@
     font-size: 36px;
     font-weight: 600;
     text-transform: uppercase;
-    color: #666
+    color: #666;
+    margin-top: 50px
 
 }
 
