--- a/src/component/client/Services.css
+++ b/src/component/client/Services.css
@@ -2,6 +2,7 @@
     margin-bottom: 40px;
     padding-bottom: 40px;
     border-bottom: 1px dotted #ccc;
+    margin-top: 40px;
 }
 
 .service-type{
@@ -17,3 +18,7 @@
     width: 18rem
 }
 
+.root{
+    background: #fff;
+    height: 100%;
+}
